Bug 427390 - Selection highlight not visible when selecting project in project-nav

--- a/bundles/org.eclipse.orion.client.ui/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/ide.css
@@ -947,7 +947,6 @@ input {
 }
 
 .projectNavColumn {
-	background: none repeat scroll 0 0 #eee;
     color: #666;
     font-weight: bold;
     padding-bottom: 0.2em;
@@ -955,7 +954,6 @@ input {
 }
 
 .projectPrimaryNavColumn {
-	background: none repeat scroll 0 0 #EEEEEE;
 	color: #000;
 }
 
